--- a/source/_assets/sass/_base.scss
+++ b/source/_assets/sass/_base.scss
@@ -100,6 +100,7 @@ li {
     ul,
     ol {
         @apply .my-0;
+        @apply .pl-8;
     }
 }
 
@@ -110,6 +111,7 @@ ul {
 
 ol {
     @apply .list-decimal;
+    @apply .pl-4;
 }
 
 p {
