--- a/source/_assets/sass/_base.scss
+++ b/source/_assets/sass/_base.scss
@@ -60,18 +60,18 @@ h6 {
 }
 
 h1 {
-    @apply .font-extrabold;
-    @apply .text-5xl;
+    @apply .font-black;
+    @apply .text-3xl;
 }
 
 h2 {
-    @apply .font-bold;
-    @apply .text-4xl;
+    @apply .font-medium;
+    @apply .text-3xl;
 }
 
 h3 {
     @apply .font-bold;
-    @apply .text-3xl;
+    @apply .text-xl;
 }
 
 h4 {
