--- a/source/_assets/sass/_base.scss
+++ b/source/_assets/sass/_base.scss
@@ -150,8 +150,8 @@ pre {
 }
 
 .btn {
-    @apply .bg-gray-400;
-    @apply .text-blue-900;
+    background-color: #EDEBEB;
+    @apply .text-gray-700;
     @apply .font-normal;
     @apply .rounded;
     @apply .shadow-lg;
@@ -164,11 +164,20 @@ pre {
     @apply .text-white;
 }
 
+.crimson { 
+    background-color: #990000;
+}
+
+.crimson:hover {
+    background-color: #D50032;
+}
+
 .btn.primary {
-    @apply .bg-red-700;
+    @apply .crimson;
     @apply .text-white;
 }
 
-.btn.primary:hover {
-    @apply .bg-red-600;
+#site-footer {
+    background-color: #333;
+    color: #999;
 }
